fix cut off test names

--- a/public/static/less/task.less
+++ b/public/static/less/task.less
@@ -92,10 +92,8 @@
 }
 .test-result-row .test-result-name {
   position: relative;
-  left: -1em;
   float: left;
   max-width: 100%;
-  min-width: 200px;
   margin-right: -1em;
 }
 
